--- a/DepartmentModule/Views/Subjects/Create.cshtml
+++ b/DepartmentModule/Views/Subjects/Create.cshtml
@@ -8,26 +8,125 @@
 
 <h4>Subject</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create" method="post" enctype="multipart/form-data" >
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Program" class="control-label"></label>
-                <input asp-for="Program" type="file" name="programFile">
-                <span asp-validation-for="Program" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
+<form asp-action="Create" method="post" enctype="multipart/form-data">
+    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+    <div class="form-group">
+        <label asp-for="Name" class="control-label"></label>
+        <input asp-for="Name" class="form-control" />
+        <span asp-validation-for="Name" class="text-danger"></span>
     </div>
-</div>
+    <label asp-for="Program" class="control-label"></label>
+    <div class="form-group card">
+        <table cellpadding="10">
+            <tr>
+                <td>
+                    <label asp-for="Program.Name" class="control-label"></label>
+                </td>
+                <td>
+                    <input readonly="readonly" asp-for="Program.Name" class="form-control" />
+
+                </td>
+                <td>
+                    <a asp-controller="Books" asp-action="AddProgram" class="btn btn-primary">Select</a>
+                 </td>
+            </tr>
+
+
+        </table>
+    </div>
+    <label asp-for="Themes" class="control-label"></label>
+    <div class="form-group card">
+        <table cellpadding="10">
+
+            <tr>
+                <td>
+                    <label asp-for="Themes.Name" class="control-label"></label>
+                </td>
+                <td>
+                    <input readonly="readonly" asp-for="Themes.Name" class="form-control" />
+                </td>
+                <td>
+                    <a asp-controller="Books" asp-action="AddThemes" class="btn btn-primary">Select</a>
+                </td>
+            </tr>
+
+        </table>
+    </div>
+    <div class="form-group">
+        <label asp-for="Literatures" class="control-label"></label>
+        <table class="table table-hover table-bordered">
+            <thead>
+                <tr>
+
+                    <td>
+                        Name
+                    </td>
+                    <td>
+                        <a asp-controller="Books" asp-action="AddLiterature" class="btn btn-primary ">Add New</a>
+                    </td>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model.Literatures)
+                {
+                    <tr>
+                        <td>
+                            @item.Name
+                        </td>
+
+                        <td>
+                            <a asp-controller="Books" asp-action="Details" class="btn btn-success" asp-route-id="@item.Id">Details</a>
+                            <a asp-controller="Subjects" asp-action="RemoveLiterature" class="btn btn-danger" asp-route-id="@item.Id">Delete</a>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+
+        </table>
+
+    </div>
+
+    <div class="form-group">
+        <label asp-for="AdditionalLiteratures" class="control-label"></label>
+        <table class="table table-hover table-bordered">
+            <thead>
+                <tr>
+                    <td>
+                        Name
+                    </td>
+
+                    <td>
+                        <a asp-controller="Books" asp-action="AddAdditionallLiterature" class="btn btn-primary ">Add New</a>
+                    </td>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model.AdditionalLiteratures)
+                {
+                    <tr>
+                        <td>
+                            @item.Name
+                        </td>
+
+                        <td>
+                            <a asp-controller="Books" asp-action="Details" class="btn btn-success" asp-route-id="@item.Id">Details</a>
+                            <a asp-controller="Subjects" asp-action="RemoveAdditionalLiterature" class="btn btn-danger" asp-route-id="@item.Id">Delete</a>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+
+        </table>
+
+    </div>
+
+
+    <div class="form-group">
+        <input type="submit" value="Save" class="btn btn-primary" />
+    </div>
+</form>
+
 
 <div>
     <a asp-action="Index">Back to List</a>
