--- a/DepartmentModule/Views/Shared/_LoginPartial.cshtml
+++ b/DepartmentModule/Views/Shared/_LoginPartial.cshtml
@@ -3,25 +3,28 @@
 @inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
 
-<ul class="navbar-nav">
-    @if (SignInManager.IsSignedIn(User))
-    {
-        <li class="nav-item">
-            <a id="manage" class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
-        </li>
-        <li class="nav-item">
-            <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-                <button id="logout" type="submit" class="nav-link btn btn-link text-dark">Logout</button>
-            </form>
-        </li>
-    }
-    else
-    {
+
+
+ @if (SignInManager.IsSignedIn(User))
+      {
         <li class="profile">
-            <a class="nav-link text-dark" id="register" asp-area="Identity" asp-page="/Account/Register">Register</a>
-        </li>
-        <li class="profile">
-            <a class="nav-link text-dark" id="login" asp-area="Identity" asp-page="/Account/Login">Login</a>
-        </li>
-    }
-</ul>
+        <a class="nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="true">
+            <span class="name"><i class="fa fa-user icon"></i> @User.Identity.Name </span>
+        </a>
+    </li>
+    <li class="profile dropdown">
+        <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Logout">
+            <i class="fa fa-power-off icon"></i> Logout
+        </a>
+    </li>
+}
+else
+{
+    <li class="profile">
+        <a class="nav-link text-dark" id="register" asp-area="Identity" asp-page="/Account/Register">Register</a>
+    </li>
+    <li class="profile">
+        <a class="nav-link text-dark" id="login" asp-area="Identity" asp-page="/Account/Login">Login</a>
+    </li>
+}
+
